--- a/package.json
+++ b/package.json
@@ -24,22 +24,24 @@
     "@mui/material": "^7.3.6",
     "@mui/x-charts": "^8.21.0",
     "@mui/x-data-grid": "^8.21.0",
+    "@types/react-router-dom": "^5.3.3",
     "bash": "^0.0.1",
     "cohere-ai": "^7.20.0",
     "install": "^0.13.0",
     "lucide-react": "^0.561.0",
     "npm": "^11.6.4",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-markdown": "^10.1.0",
+    "react-router-dom": "^5.3.4",
     "recharts": "^3.6.0",
     "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/node": "^24.10.0",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^5.1.0",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^5.2.0",
